--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-07 Thu 08:31]
+#+CAPTION: Clock summary at [2017-09-07 Thu 08:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *14:06* |       |      | 100.0 |
+| *Total time*                                                                | *14:12* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 14:06   |       |      | 100.0 |
-| Active                                                                      |         | 14:06 |      | 100.0 |
+| Stories                                                                     | 14:12   |       |      | 100.0 |
+| Active                                                                      |         | 14:12 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   5.2 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   8.7 |
 | COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   6.1 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   8.9 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   8.8 |
 | COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.3 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  17.3 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  12.9 |
-| STARTED Rename yarn concepts                                                |         |       | 5:18 |  37.6 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  17.1 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  12.8 |
+| STARTED Rename yarn concepts                                                |         |       | 5:24 |  38.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,6 +438,7 @@ namespace, and making it clear they are connected to yarn. Example:
 and so forth.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-07 Thu 08:32]--[2017-09-07 Thu 08:38] =>  0:06
     CLOCK: [2017-09-07 Thu 08:05]--[2017-09-07 Thu 08:31] =>  0:26
     CLOCK: [2017-09-05 Tue 22:55]--[2017-09-05 Tue 23:32] =>  0:37
     CLOCK: [2017-09-05 Tue 21:51]--[2017-09-05 Tue 22:54] =>  1:03
@@ -480,8 +481,8 @@ Tasks:
 - rename object's modeled concepts
 - rename concept transform, tests
 - rename meta-name, update JSON for tests
-- rename stereotype
 - tidy-up mock factory (variables, method names)
+- rename stereotype
 - ORM transform uses expand instead of transform
 - rename test model types with concept in the name.
 - check that tailor generates correct code.
