--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-07 Thu 08:38]
+#+CAPTION: Clock summary at [2017-09-07 Thu 08:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *14:12* |       |      | 100.0 |
+| *Total time*                                                                | *14:26* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 14:12   |       |      | 100.0 |
-| Active                                                                      |         | 14:12 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   5.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   8.7 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   6.1 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   8.8 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.3 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  17.1 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  12.8 |
-| STARTED Rename yarn concepts                                                |         |       | 5:24 |  38.0 |
+| Stories                                                                     | 14:26   |       |      | 100.0 |
+| Active                                                                      |         | 14:26 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   5.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   8.5 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   6.0 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   8.7 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.2 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  16.9 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  12.6 |
+| STARTED Rename yarn concepts                                                |         |       | 5:38 |  39.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,6 +438,7 @@ namespace, and making it clear they are connected to yarn. Example:
 and so forth.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-07 Thu 08:39]--[2017-09-07 Thu 08:53] =>  0:14
     CLOCK: [2017-09-07 Thu 08:32]--[2017-09-07 Thu 08:38] =>  0:06
     CLOCK: [2017-09-07 Thu 08:05]--[2017-09-07 Thu 08:31] =>  0:26
     CLOCK: [2017-09-05 Tue 22:55]--[2017-09-05 Tue 23:32] =>  0:37
