--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-07 Thu 20:54]
+#+CAPTION: Clock summary at [2017-09-08 Fri 09:01]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:19* |       |      | 100.0 |
+| *Total time*                                                                | *15:54* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:19   |       |      | 100.0 |
-| Active                                                                      |         | 15:19 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   8.1 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.7 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   8.2 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.0 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  15.9 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  11.9 |
-| STARTED Rename yarn concepts                                                |         |       | 6:31 |  42.5 |
+| Stories                                                                     | 15:54   |       |      | 100.0 |
+| Active                                                                      |         | 15:54 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.8 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.5 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.9 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.9 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  15.3 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  11.4 |
+| STARTED Rename yarn concepts                                                |         |       | 7:06 |  44.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,6 +438,8 @@ namespace, and making it clear they are connected to yarn. Example:
 and so forth.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-08 Fri 08:56]--[2017-09-08 Fri 09:01] =>  0:05
+    CLOCK: [2017-09-08 Fri 08:25]--[2017-09-08 Fri 08:55] =>  0:30
     CLOCK: [2017-09-07 Thu 20:05]--[2017-09-07 Thu 20:54] =>  0:49
     CLOCK: [2017-09-07 Thu 08:53]--[2017-09-07 Thu 08:57] =>  0:04
     CLOCK: [2017-09-07 Thu 08:39]--[2017-09-07 Thu 08:53] =>  0:14
