--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 09:01]
+#+CAPTION: Clock summary at [2017-09-08 Fri 09:23]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:54* |       |      | 100.0 |
+| *Total time*                                                                | *16:15* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:54   |       |      | 100.0 |
-| Active                                                                      |         | 15:54 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.8 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.5 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.9 |
+| Stories                                                                     | 16:15   |       |      | 100.0 |
+| Active                                                                      |         | 16:15 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.6 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.3 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.7 |
 | COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.9 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  15.3 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  11.4 |
-| STARTED Rename yarn concepts                                                |         |       | 7:06 |  44.7 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  15.0 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  11.2 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.2 |
+| STARTED Rename yarn concepts                                                |         |       | 7:06 |  43.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +437,18 @@ namespace, and making it clear they are connected to yarn. Example:
 : yarn::orm::value
 
 and so forth.
+
+*** COMPLETED Tailor dogen models                                     :story:
+    CLOSED: [2017-09-08 Fri 09:23]
+    CLOCK: [2017-09-08 Fri 09:02]--[2017-09-08 Fri 09:23] =>  0:21
+
+We are making a lot of changes to the JSON frontend, but our tests are
+not exactly comprehensive. It would be good to start tailoring the
+dogen models too, just to see what changes - even if we know we cannot
+knit them yet.
+
+The only snag is that we broke indent all json for now, but we'll have
+to live with it. Northwind model seems borked.
 
 *** STARTED Rename yarn concepts                                      :story:
     CLOCK: [2017-09-08 Fri 08:56]--[2017-09-08 Fri 09:01] =>  0:05
