--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 09:23]
+#+CAPTION: Clock summary at [2017-09-08 Fri 13:45]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:15* |       |      | 100.0 |
+| *Total time*                                                                | *16:58* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:15   |       |      | 100.0 |
-| Active                                                                      |         | 16:15 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.6 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.3 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.7 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.9 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  15.0 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  11.2 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.2 |
-| STARTED Rename yarn concepts                                                |         |       | 7:06 |  43.7 |
+| Stories                                                                     | 16:58   |       |      | 100.0 |
+| Active                                                                      |         | 16:58 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.3 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.1 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.4 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.8 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  14.3 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.7 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.1 |
+| STARTED Rename yarn concepts                                                |         |       | 7:49 |  46.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -451,6 +451,8 @@ The only snag is that we broke indent all json for now, but we'll have
 to live with it. Northwind model seems borked.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-08 Fri 13:15]--[2017-09-08 Fri 13:45] =>  0:30
+    CLOCK: [2017-09-08 Fri 11:48]--[2017-09-08 Fri 12:01] =>  0:13
     CLOCK: [2017-09-08 Fri 08:56]--[2017-09-08 Fri 09:01] =>  0:05
     CLOCK: [2017-09-08 Fri 08:25]--[2017-09-08 Fri 08:55] =>  0:30
     CLOCK: [2017-09-07 Thu 20:05]--[2017-09-07 Thu 20:54] =>  0:49
@@ -501,9 +503,9 @@ Tasks:
 - rename meta-name, update JSON for tests
 - tidy-up mock factory (variables, method names)
 - rename stereotype
-- ORM transform uses expand instead of transform
 - rename test model types with concept in the name.
 - check that tailor generates correct code.
+- ORM transform uses expand instead of transform
 
 *** Code-generate annotations type templates                          :story:
 
