--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 13:45]
+#+CAPTION: Clock summary at [2017-09-08 Fri 13:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:58* |       |      | 100.0 |
+| *Total time*                                                                | *17:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:58   |       |      | 100.0 |
-| Active                                                                      |         | 16:58 |      | 100.0 |
+| Stories                                                                     | 17:06   |       |      | 100.0 |
+| Active                                                                      |         | 17:06 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   8.0 |
 | COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.1 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.4 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.8 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  14.3 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.7 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.1 |
-| STARTED Rename yarn concepts                                                |         |       | 7:49 |  46.1 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.3 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.7 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  14.2 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.6 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.0 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  45.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -97,6 +97,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-09-08 Fri 13:45]--[2017-09-08 Fri 13:53] =>  0:08
     CLOCK: [2017-09-02 Sat 12:45]--[2017-09-02 Sat 13:14] =>  0:29
     CLOCK: [2017-09-01 Fri 15:52]--[2017-09-01 Fri 16:07] =>  0:15
     CLOCK: [2017-08-30 Wed 22:58]--[2017-08-30 Wed 23:25] =>  0:27
@@ -450,7 +451,8 @@ knit them yet.
 The only snag is that we broke indent all json for now, but we'll have
 to live with it. Northwind model seems borked.
 
-*** STARTED Rename yarn concepts                                      :story:
+*** COMPLETED Rename yarn concepts                                    :story:
+    CLOSED: [2017-09-08 Fri 13:51]
     CLOCK: [2017-09-08 Fri 13:15]--[2017-09-08 Fri 13:45] =>  0:30
     CLOCK: [2017-09-08 Fri 11:48]--[2017-09-08 Fri 12:01] =>  0:13
     CLOCK: [2017-09-08 Fri 08:56]--[2017-09-08 Fri 09:01] =>  0:05
@@ -506,6 +508,17 @@ Tasks:
 - rename test model types with concept in the name.
 - check that tailor generates correct code.
 - ORM transform uses expand instead of transform
+
+*** Remove extra copying in mapper                                    :story:
+
+It seems in addition to cloning the model in mapper, we are also
+copying the objects. This seems wrong. Try not copying and see what
+happens.
+
+*** Investigate the JSON break on Northwind model                     :story:
+
+At present we cannot indent all JSON documents because one of the
+models does not validate. It must be a tailor bug. Fix it.
 
 *** Code-generate annotations type templates                          :story:
 
