--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,23 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 13:53]
+#+CAPTION: Clock summary at [2017-09-08 Fri 13:59]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:06* |       |      | 100.0 |
+| *Total time*                                                                | *17:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:06   |       |      | 100.0 |
-| Active                                                                      |         | 17:06 |      | 100.0 |
+| Stories                                                                     | 17:11   |       |      | 100.0 |
+| Active                                                                      |         | 17:11 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   8.0 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.1 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.0 |
 | COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.3 |
 | COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.7 |
 | COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  14.2 |
 | COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.6 |
 | COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.0 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  45.7 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  45.5 |
+| COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -509,7 +510,9 @@ Tasks:
 - check that tailor generates correct code.
 - ORM transform uses expand instead of transform
 
-*** Remove extra copying in mapper                                    :story:
+*** COMPLETED Remove extra copying in mapper                          :story:
+    CLOSED: [2017-09-08 Fri 13:59]
+    CLOCK: [2017-09-08 Fri 13:54]--[2017-09-08 Fri 13:59] =>  0:05
 
 It seems in addition to cloning the model in mapper, we are also
 copying the objects. This seems wrong. Try not copying and see what
