--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,24 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 13:59]
+#+CAPTION: Clock summary at [2017-09-08 Fri 14:31]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:11* |       |      | 100.0 |
+| *Total time*                                                                | *17:42* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:11   |       |      | 100.0 |
-| Active                                                                      |         | 17:11 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   8.0 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   5.0 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.3 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.7 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  14.2 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.6 |
+| Stories                                                                     | 17:42   |       |      | 100.0 |
+| Active                                                                      |         | 17:42 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.7 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.9 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.1 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.6 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  13.7 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.3 |
 | COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.0 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  45.5 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  44.2 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.5 |
+| STARTED Investigate the JSON break on Northwind model                       |         |       | 0:31 |   2.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -518,10 +519,19 @@ It seems in addition to cloning the model in mapper, we are also
 copying the objects. This seems wrong. Try not copying and see what
 happens.
 
-*** Investigate the JSON break on Northwind model                     :story:
+*** STARTED Investigate the JSON break on Northwind model             :story:
+    CLOCK: [2017-09-08 Fri 14:00]--[2017-09-08 Fri 14:31] =>  0:31
 
 At present we cannot indent all JSON documents because one of the
 models does not validate. It must be a tailor bug. Fix it.
+
+The problem is with ODB pragmas:
+
+: "odb_pragma" : "column("LASTNAME")"
+
+We need to somehow escape the quotes. However, why do we even need to
+have these set? Actually these are required because we are renaming
+the field (from =last_name=).
 
 *** Code-generate annotations type templates                          :story:
 
