--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 14:31]
+#+CAPTION: Clock summary at [2017-09-08 Fri 14:58]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:42* |       |      | 100.0 |
+| *Total time*                                                                | *18:08* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:42   |       |      | 100.0 |
-| Active                                                                      |         | 17:42 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.7 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.9 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   7.1 |
+| Stories                                                                     | 18:08   |       |      | 100.0 |
+| Active                                                                      |         | 18:08 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   4.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.5 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.8 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   6.9 |
 | COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.6 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  13.7 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.3 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   2.0 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  44.2 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  13.4 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  10.0 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.9 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  43.1 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.5 |
-| STARTED Investigate the JSON break on Northwind model                       |         |       | 0:31 |   2.9 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   5.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -519,7 +519,9 @@ It seems in addition to cloning the model in mapper, we are also
 copying the objects. This seems wrong. Try not copying and see what
 happens.
 
-*** STARTED Investigate the JSON break on Northwind model             :story:
+*** COMPLETED Investigate the JSON break on Northwind model           :story:
+    CLOSED: [2017-09-08 Fri 14:58]
+    CLOCK: [2017-09-08 Fri 14:32]--[2017-09-08 Fri 14:58] =>  0:26
     CLOCK: [2017-09-08 Fri 14:00]--[2017-09-08 Fri 14:31] =>  0:31
 
 At present we cannot indent all JSON documents because one of the
