quilt.cpp: supply the new enablement index to dependencies builder
Not active yet as it causes breaks.

--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-09 Sat 23:39]
+#+CAPTION: Clock summary at [2017-09-10 Sun 00:18]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *24:42* |       |      | 100.0 |
+| *Total time*                                                                | *25:19* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 24:42   |       |      | 100.0 |
-| Active                                                                      |         | 24:42 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   5.5 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   3.5 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   5.1 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.9 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   9.9 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   7.4 |
+| Stories                                                                     | 25:19   |       |      | 100.0 |
+| Active                                                                      |         | 25:19 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   2.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   5.4 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   3.4 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   4.9 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.8 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   9.6 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   7.2 |
 | COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.4 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  31.6 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  30.9 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.3 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   3.8 |
 | COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.7 |
 | COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.0 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 6:08 |  24.8 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  26.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -564,6 +564,8 @@ Actually, we need way to figure out which types to generate, and which
 types are references. So we still need this flag.
 
 *** STARTED Add canonical archetype support to yarn                   :story:
+    CLOCK: [2017-09-10 Sun 00:08]--[2017-09-10 Sun 00:18] =>  0:10
+    CLOCK: [2017-09-09 Sat 23:40]--[2017-09-10 Sun 00:07] =>  0:27
     CLOCK: [2017-09-09 Sat 23:28]--[2017-09-09 Sat 23:39] =>  0:11
     CLOCK: [2017-09-09 Sat 22:50]--[2017-09-09 Sat 23:27] =>  0:37
     CLOCK: [2017-09-09 Sat 22:05]--[2017-09-09 Sat 22:49] =>  0:44
@@ -657,6 +659,7 @@ Tasks:
   it in C++ kernel and supply it to dependencies builder factory.
 - remove all references of formattables and element properties in
   dependencies builder.
+- make is_enabled private in dependencies builder and see what breaks.
 
 *** Move enablement into yarn                                         :story:
 
